# orocos_kdl_diamondback

./: CMakeLists.txt  Makefile  manifest.xml
src/: chainidsolver_constraint_vereshchagin.cpp  chainidsolver_constraint_vereshchagin.hpp  chainidsolver_recursive_newton_euler.cpp  chainidsolver_recursive_newton_euler.hpp  chainidsolver_vereshchagin.cpp  chainidsolver_vereshchagin.cppRubenCorrected  chainidsolver_vereshchagin.hpp  chainidsolver_vereshchagin.hppRubenCorrected  tree.hpp  treeconstraints.cpp  treeconstraints.hpp  treeidsolver_constraint_vereshchagin.hpp  treeidsolver_vereshchagin.hpp
src/bindings/python/: CMakeLists.txt
src/utilities/: svd_eigen_HH.cpp  svd_eigen_HH.hpp
tests/: inertiatest.cpp  solvertest.cpp  solvertest.hpp  test-runner.cpp
